// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Votes should render correctly with no votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      aria-label="Add vote"
      class="dot-button vote-button-add"
      data-tooltip-content="Add vote"
      data-tooltip-id="scrumlr-tooltip"
    >
      <svg
        class="vote-button-add__icon"
      >
        plus.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with no votes and disabled voting 1`] = `<div />`;

exports[`Votes should render correctly with votes and active voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      aria-label="Remove vote"
      class="dot-button vote-button-remove"
      data-tooltip-content="Remove vote"
      data-tooltip-id="scrumlr-tooltip"
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
      >
        minus.svg
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
    <button
      aria-label="Multiple votes are not allowed"
      class="dot-button vote-button-add"
      data-tooltip-content="Multiple votes are not allowed"
      data-tooltip-id="scrumlr-tooltip"
      disabled=""
    >
      <svg
        class="vote-button-add__icon"
      >
        plus.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Votes should render correctly with votes and disabled voting 1`] = `
<div>
  <div
    class="votes"
    role="none"
  >
    <button
      aria-label="1 vote"
      class="dot-button vote-button-remove"
      data-tooltip-content="1 vote"
      data-tooltip-id="scrumlr-tooltip"
      disabled=""
    >
      <span
        class="vote-button-remove__folded-corner"
      />
      <svg
        class="vote-button-remove__icon"
      >
        minus.svg
      </svg>
      <span
        class="vote-button-remove__count"
      >
        1
      </span>
    </button>
  </div>
</div>
`;
